SupportModel/src/objects/Model__c.object
<CustomObject>
    <description>Model object is used to give user option to enter details related to Incidents and Service Requests</description>
    <fields>
        <fullName>Average_Incident_Resolution_Time__c</fullName>
        <formula>ROUND((Yearly_Efforts_IT__c  /  No_of_IT_Tickets__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Incident Resolution Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Service_Request_Resolution_Time__c</fullName>
        <formula>ROUND((Yearly_Efforts_SR__c  / No_of_SR_Tickets__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Service Request Resolution Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Time_for_Knowledge_Retention__c</fullName>
        <defaultValue>2</defaultValue>
        <description>You may change this value as per the context.</description>
        <inlineHelpText>Hours per incident</inlineHelpText>
        <label>Average Time for Knowledge Retention</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Communication_Collaboration_Time__c</fullName>
        <defaultValue>0.15</defaultValue>
        <description>% of incident &amp; service request resolution effort</description>
        <inlineHelpText>You may change this value as per the context.</inlineHelpText>
        <label>Avg Communication &amp; Collaboration Time</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Avg_Problem_Ticket_Resolution_Time__c</fullName>
        <defaultValue>36</defaultValue>
        <description>Hours per problem ticket</description>
        <inlineHelpText>You may change this value as per the context.</inlineHelpText>
        <label>Avg Problem Ticket Resolution Time</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Service_Request_Resolution_Time__c</fullName>
        <formula>Yearly_Efforts_SR__c  /  No_of_SR_Tickets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Service Request Resolution Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Time_for_Prev_Corr_Actions__c</fullName>
        <defaultValue>0.5</defaultValue>
        <description>Hours per incident</description>
        <inlineHelpText>You may change this value as per the context.</inlineHelpText>
        <label>Avg Time for Prev/Corr Actions</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_User_Count__c</fullName>
        <inlineHelpText>Please enter potential count of business users who are expected to raise incidents and service requests. While this user count is not currently used to estimate efforts in this model, please make sure ticket volume is proportionate to the user volume.</inlineHelpText>
        <label>Business User Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category_Sum_SR__c</fullName>
        <label>Category % Sum SR</label>
        <summarizedField>Category__c.Percentage__c</summarizedField>
        <summaryFilterItems>
            <field>Category__c.Type__c</field>
            <operation>equals</operation>
            <value>SR</value>
        </summaryFilterItems>
        <summaryForeignKey>Category__c.Models__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Category_value__c</fullName>
        <label>Category % value</label>
        <summarizedField>Category__c.Percentage__c</summarizedField>
        <summaryFilterItems>
            <field>Category__c.Type__c</field>
            <operation>equals</operation>
            <value>IT</value>
        </summaryFilterItems>
        <summaryForeignKey>Category__c.Models__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Change_Minor_Enhancement_Efforts_Month__c</fullName>
        <defaultValue>90</defaultValue>
        <description>Hours on average per Month</description>
        <inlineHelpText>You may change this value as per the context.</inlineHelpText>
        <label>Change/ Minor Enhancement Efforts/Month</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consulting_Efforts__c</fullName>
        <defaultValue>9</defaultValue>
        <description>Hours per week</description>
        <inlineHelpText>You may change this value as per the context.</inlineHelpText>
        <label>Consulting Efforts</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Duration__c</fullName>
        <description>Enter Contract Duration in Years</description>
        <inlineHelpText>Enter Contract Duration in Years</inlineHelpText>
        <label>Contract Duration</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>24</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>36</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>48</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>60</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Management_Efforts__c</fullName>
        <defaultValue>0.03</defaultValue>
        <description>% of total ticket related efforts</description>
        <inlineHelpText>You may change this value as per the context.</inlineHelpText>
        <label>Contract Management Efforts</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <description>Planned Start Date of the project</description>
        <label>Contract Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Models</relationshipLabel>
        <relationshipName>Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_Efforts__c</fullName>
        <defaultValue>0.10</defaultValue>
        <description>% of total first year efforts</description>
        <inlineHelpText>You may change this value as per the context.</inlineHelpText>
        <label>Initial Efforts</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Model_Name__c</fullName>
        <label>Model Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Service_Request_Volume__c</fullName>
        <inlineHelpText>Please enter this value.</inlineHelpText>
        <label>Monthly Service Request Volume</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthy_Incident_Volume__c</fullName>
        <inlineHelpText>Please enter this value.</inlineHelpText>
        <label>Monthy Incident Volume</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_IT_Tickets__c</fullName>
        <label>No of IT Tickets</label>
        <summarizedField>Category__c.No_of_Tickets_Actual__c</summarizedField>
        <summaryFilterItems>
            <field>Category__c.Type__c</field>
            <operation>equals</operation>
            <value>IT</value>
        </summaryFilterItems>
        <summaryForeignKey>Category__c.Models__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_SR_Tickets__c</fullName>
        <label>No of SR Tickets</label>
        <summarizedField>Category__c.No_of_Tickets_Actual__c</summarizedField>
        <summaryFilterItems>
            <field>Category__c.Type__c</field>
            <operation>equals</operation>
            <value>SR</value>
        </summaryFilterItems>
        <summaryForeignKey>Category__c.Models__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_Timezone_of_Business_Users__c</fullName>
        <inlineHelpText>Please consider geo location of business users while finalizing overall costs. This model does not consider non-standard hours. If support needed during non-standard hours, please add on the effort/ rates accordingly.</inlineHelpText>
        <label>Primary Timezone of Business Users</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Timezone</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Problem_Ticket_Volume__c</fullName>
        <defaultValue>0.10</defaultValue>
        <description>&apos;Of incident ticket volume</description>
        <inlineHelpText>You may change this value as per the context.</inlineHelpText>
        <label>Problem Ticket Volume</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RunTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>RunTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDM_Efforts__c</fullName>
        <defaultValue>0.05</defaultValue>
        <description>% of total ticket related efforts</description>
        <inlineHelpText>You may change this value as per the context.</inlineHelpText>
        <label>SDM Efforts</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Optimization_Year_1_Year_2__c</fullName>
        <defaultValue>0.10</defaultValue>
        <inlineHelpText>It is the percentage of decrease/increase in service optimization expected in the year. You may enter negative number in case it is expected to be increased.</inlineHelpText>
        <label>Service Optimization %(Year 1- Year 2)</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Optimization_Year_2_Year_3__c</fullName>
        <defaultValue>0.10</defaultValue>
        <inlineHelpText>It is the percentage of decrease/increase in service optimization expected in the year. You may enter negative number in case it is expected to be increased.</inlineHelpText>
        <label>Service Optimization %(Year 2- Year 3)</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Optimization_Year_3_Year_4__c</fullName>
        <defaultValue>0.10</defaultValue>
        <inlineHelpText>It is the percentage of decrease/increase in service optimization expected in the year. You may enter negative number in case it is expected to be increased.</inlineHelpText>
        <label>Service Optimization %(Year 3- Year 4)</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <inlineHelpText>This cost model is based on 8x5 service type. Please add on relevant efforts and costs needed to support other service types.</inlineHelpText>
        <label>Service Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>8x5</fullName>
                </value>
                <value>
                    <fullName>8x7</fullName>
                </value>
                <value>
                    <fullName>24x5</fullName>
                </value>
                <value>
                    <fullName>24x7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TVITYear1__c</fullName>
        <formula>Monthy_Incident_Volume__c *12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TVITYear1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Efforts_IT__c</fullName>
        <label>Yearly Efforts IT</label>
        <summarizedField>Category__c.Yearly_Efforts_Actual__c</summarizedField>
        <summaryFilterItems>
            <field>Category__c.Type__c</field>
            <operation>equals</operation>
            <value>IT</value>
        </summaryFilterItems>
        <summaryForeignKey>Category__c.Models__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Yearly_Efforts_SR__c</fullName>
        <label>Yearly Efforts SR</label>
        <summarizedField>Category__c.Yearly_Efforts_Actual__c</summarizedField>
        <summaryFilterItems>
            <field>Category__c.Type__c</field>
            <operation>equals</operation>
            <value>SR</value>
        </summaryFilterItems>
        <summaryForeignKey>Category__c.Models__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Model</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>Model</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Category_Percentage_Sum</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Category_value__c  &gt;1, Category_Sum_SR__c&gt;1 )</errorConditionFormula>
        <errorMessage>Category percentage SUM cannot exceed 100%</errorMessage>
    </validationRules>
</CustomObject>